brewing_time を レスポンスから削除
